@@ -23,6 +23,11 @@
  */
 package com.cloudbees.jenkins.plugins.bitbucket.endpoints;
 
+import com.cloudbees.jenkins.plugins.bitbucket.api.endpoint.BitbucketEndpointProvider;
+import com.cloudbees.jenkins.plugins.bitbucket.impl.BitbucketPlugin;
+import com.cloudbees.jenkins.plugins.bitbucket.impl.endpoint.BitbucketCloudEndpoint;
+import com.cloudbees.jenkins.plugins.bitbucket.impl.endpoint.BitbucketServerEndpoint;
+import com.cloudbees.jenkins.plugins.bitbucket.impl.endpoint.Messages;
 import com.cloudbees.jenkins.plugins.bitbucket.server.BitbucketServerVersion;
 import com.cloudbees.jenkins.plugins.bitbucket.server.BitbucketServerWebhookImplementation;
 import com.cloudbees.plugins.credentials.Credentials;
@@ -45,9 +50,9 @@ import java.net.URL;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import jenkins.model.Jenkins;
 import org.apache.commons.io.FileUtils;
+import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -60,6 +65,7 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assumptions.assumeFalse;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
+@SuppressWarnings("deprecation")
 @WithJenkins
 class BitbucketEndpointConfigurationTest {
 
@@ -68,6 +74,7 @@ class BitbucketEndpointConfigurationTest {
     @BeforeAll
     static void init(JenkinsRule rule) {
         r = rule;
+        BitbucketPlugin.aliases();
     }
 
     @AfterEach
@@ -88,7 +95,7 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__newInstance__when__configuredWithEmpty__then__cloudPresent() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(Collections.<AbstractBitbucketEndpoint>emptyList());
+        instance.setEndpoints(Collections.emptyList());
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketCloudEndpoint.class);
     }
 
@@ -96,8 +103,7 @@ class BitbucketEndpointConfigurationTest {
     void given__newInstance__when__configuredWithCloud__then__cloudPresent() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         assumeFalse("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(new BitbucketCloudEndpoint(true, "dummy")));
+        instance.setEndpoints(List.of(buildEndpoint(true, "dummy")));
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketCloudEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
             assertThat(endpoint.getCredentialsId()).isEqualTo("dummy");
@@ -108,10 +114,7 @@ class BitbucketEndpointConfigurationTest {
     void given__newInstance__when__configuredWithMultipleCloud__then__onlyFirstCloudPresent() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         assumeFalse("first".equals(instance.getEndpoints().get(0).getCredentialsId()));
-        instance.setEndpoints(Arrays.<AbstractBitbucketEndpoint>asList(
-                new BitbucketCloudEndpoint(true, "first"),
-                new BitbucketCloudEndpoint(true, "second"),
-                new BitbucketCloudEndpoint(true, "third")));
+        instance.setEndpoints(List.of(buildEndpoint(true, "first"), buildEndpoint(true, "second"), buildEndpoint(true, "third")));
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketCloudEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
             assertThat(endpoint.getCredentialsId()).isEqualTo("first");
@@ -122,11 +125,10 @@ class BitbucketEndpointConfigurationTest {
     void given__newInstance__when__configuredAsAnon__then__permissionError() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         r.jenkins.setAuthorizationStrategy(new FullControlOnceLoggedInAuthorizationStrategy());
-        try (ACLContext context = ACL.as(Jenkins.ANONYMOUS)) {
-            assertThatThrownBy(() -> instance.setEndpoints(Arrays.<AbstractBitbucketEndpoint>asList(
-                        new BitbucketCloudEndpoint(true, "first"),
-                        new BitbucketCloudEndpoint(true, "second"),
-                        new BitbucketCloudEndpoint(true, "third"))))
+        try (ACLContext context = ACL.as2(Jenkins.ANONYMOUS2)) {
+            assertThatThrownBy(() ->
+                    instance.setEndpoints(List.of(buildEndpoint(true, "first"), buildEndpoint(true, "second"), buildEndpoint(true, "third")))
+                )
                 .hasMessage(hudson.security.Messages.AccessDeniedException2_MissingPermission("anonymous", "Overall/Administer"));
         } finally {
             r.jenkins.setAuthorizationStrategy(AuthorizationStrategy.UNSECURED);
@@ -141,10 +143,7 @@ class BitbucketEndpointConfigurationTest {
         mockStrategy.grant(Jenkins.MANAGE).onRoot().to("admin");
         r.jenkins.setAuthorizationStrategy(mockStrategy);
         try (ACLContext context = ACL.as(User.get("admin"))) {
-            instance.setEndpoints(Arrays.<AbstractBitbucketEndpoint>asList(
-                new BitbucketCloudEndpoint(true, "first"),
-                new BitbucketCloudEndpoint(true, "second"),
-                new BitbucketCloudEndpoint(true, "third")));
+            instance.setEndpoints(List.of(buildEndpoint(true, "first"), buildEndpoint(true, "second"), buildEndpoint(true, "third")));
             assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketCloudEndpoint.class);
             assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
                 assertThat(endpoint.getCredentialsId()).isEqualTo("first");
@@ -158,10 +157,10 @@ class BitbucketEndpointConfigurationTest {
     void given__newInstance__when__configuredWithServerUsingCloudUrl__then__convertedToCloud() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         assumeFalse("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
-        instance.setEndpoints(Arrays.asList(
+        instance.setEndpoints(List.of(
                 new BitbucketServerEndpoint("I am silly", BitbucketCloudEndpoint.SERVER_URL, true, "dummy"),
-                new BitbucketCloudEndpoint(true, "second"),
-                new BitbucketCloudEndpoint(true, "third")));
+                buildEndpoint(true, "second"),
+                buildEndpoint(true, "third")));
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketCloudEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
             assertThat(endpoint.getCredentialsId()).isEqualTo("dummy");
@@ -172,14 +171,12 @@ class BitbucketEndpointConfigurationTest {
     void given__newInstance__when__configuredWithServer__then__serverPresent() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         assumeFalse("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(
-                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
 
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketServerEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
             assertThat(endpoint.getDisplayName()).isEqualTo("Example Inc");
-            assertThat(endpoint.getServerUrl()).isEqualTo("https://bitbucket.example.com");
+            assertThat(endpoint.getServerURL()).isEqualTo("https://bitbucket.example.com");
             assertThat(endpoint.isManageHooks()).isTrue();
             assertThat(endpoint.getCredentialsId()).isEqualTo("dummy");
         });
@@ -189,21 +186,20 @@ class BitbucketEndpointConfigurationTest {
     void given__newInstance__when__configuredWithTwoServers__then__serversPresent() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         assumeFalse("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
-        instance.setEndpoints(
-                Arrays.<AbstractBitbucketEndpoint>asList(
+        instance.setEndpoints(List.of(
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", false, null)));
 
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketServerEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
             assertThat(endpoint.getDisplayName()).isEqualTo("Example Inc");
-            assertThat(endpoint.getServerUrl()).isEqualTo("https://bitbucket.example.com");
+            assertThat(endpoint.getServerURL()).isEqualTo("https://bitbucket.example.com");
             assertThat(endpoint.isManageHooks()).isTrue();
             assertThat(endpoint.getCredentialsId()).isEqualTo("dummy");
         });
         assertThat(instance.getEndpoints()).element(1).satisfies(endpoint -> {
             assertThat(endpoint.getDisplayName()).isEqualTo("Example Org");
-            assertThat(endpoint.getServerUrl()).isEqualTo("http://example.org:8080/bitbucket");
+            assertThat(endpoint.getServerURL()).isEqualTo("http://example.org:8080/bitbucket");
             assertThat(endpoint.isManageHooks()).isFalse();
             assertThat(endpoint.getCredentialsId()).isNull();
         });
@@ -212,11 +208,10 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithCloud__when__addingAnotherCloud__then__onlyFirstCloudRetained() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(new BitbucketCloudEndpoint(true, "dummy")));
+        instance.setEndpoints(List.of(buildEndpoint(true, "dummy")));
         assumeTrue("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
 
-        assertThat(instance.addEndpoint(new BitbucketCloudEndpoint(false, null))).isFalse();
+        assertThat(instance.addEndpoint(new BitbucketCloudEndpoint())).isFalse();
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketCloudEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
             assertThat(endpoint.getCredentialsId()).isEqualTo("dummy");
@@ -226,12 +221,10 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithServer__when__addingCloud__then__cloudAdded() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(
-                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
         assumeTrue("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
 
-        assertThat(instance.addEndpoint(new BitbucketCloudEndpoint(true, "added"))).isTrue();
+        assertThat(instance.addEndpoint(buildEndpoint(true, "added"))).isTrue();
         assertThat(instance.getEndpoints()).hasExactlyElementsOfTypes(BitbucketServerEndpoint.class, BitbucketCloudEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
             assertThat(endpoint.getCredentialsId()).isEqualTo("dummy");
@@ -248,9 +241,7 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithServer__when__addingDifferentServer__then__serverAdded() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(
-                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
         assumeTrue("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
 
         assertThat(instance.addEndpoint(new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "added"))).isTrue();
@@ -266,9 +257,7 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithServer__when__addingSameServer__then__onlyFirstServerRetained() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(
-                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
         assumeTrue("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
 
         assertThat(instance.addEndpoint(new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", false, null))).isFalse();
@@ -281,11 +270,10 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithCloud__when__updatingCloud__then__cloudUpdated() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(new BitbucketCloudEndpoint(true, "dummy")));
+        instance.setEndpoints(List.of(buildEndpoint(true, "dummy")));
         assumeTrue("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
 
-        instance.updateEndpoint(new BitbucketCloudEndpoint(false, null));
+        instance.updateEndpoint(new BitbucketCloudEndpoint());
 
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketCloudEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
@@ -296,11 +284,9 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithServer__when__updatingCloud__then__cloudAdded() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(
-                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
         assumeTrue("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
-        instance.updateEndpoint(new BitbucketCloudEndpoint(true, "added"));
+        instance.updateEndpoint(buildEndpoint(true, "added"));
 
         assertThat(instance.getEndpoints()).hasExactlyElementsOfTypes(BitbucketServerEndpoint.class, BitbucketCloudEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
@@ -314,12 +300,10 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithServer__when__updatingDifferentServer__then__serverAdded() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(
-                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy", false, null)));
         assumeTrue("dummy".equals(instance.getEndpoints().get(0).getCredentialsId()));
 
-        instance.updateEndpoint(new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "added"));
+        instance.updateEndpoint(new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "added", false, null));
 
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketServerEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
@@ -333,16 +317,14 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithServer__when__updatingSameServer__then__serverUpdated() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(
-                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy")));
 
         instance.updateEndpoint(new BitbucketServerEndpoint("Example, Inc.", "https://bitbucket.example.com/", false, null));
 
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketServerEndpoint.class);
         assertThat(instance.getEndpoints()).element(0).satisfies(endpoint -> {
             assertThat(endpoint.getDisplayName()).isEqualTo("Example, Inc.");
-            assertThat(endpoint.getServerUrl()).isEqualTo("https://bitbucket.example.com");
+            assertThat(endpoint.getServerURL()).isEqualTo("https://bitbucket.example.com");
             assertThat(endpoint.isManageHooks()).isFalse();
             assertThat(endpoint.getCredentialsId()).isNull();
         });
@@ -351,8 +333,13 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__newInstance__when__removingCloud__then__defaultRestored() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        assertThat(instance.getEndpoints().get(0).getCredentialsId()).isNull();
-        assertThat(instance.removeEndpoint(new BitbucketCloudEndpoint(true, "dummy"))).isTrue();
+        // verify there is always a default endpoint
+        assertThat(instance.getEndpoints()).isNotEmpty()
+            .element(0)
+            .satisfies(endpoint -> assertThat(endpoint.getCredentialsId()).isNull());
+        // remove default does not really remove it
+        assertThat(instance.removeEndpoint(buildEndpoint(true, "dummy"))).isFalse();
+        // default always exists
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketCloudEndpoint.class);
     }
 
@@ -360,8 +347,8 @@ class BitbucketEndpointConfigurationTest {
     void given__instanceWithCloudAndServers__when__removingServer__then__matchingServerRemoved() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
+                List.of(
+                        buildEndpoint(true, "first"),
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "third")
                 ));
@@ -379,8 +366,8 @@ class BitbucketEndpointConfigurationTest {
     void given__instanceWithCloudAndServers__when__removingCloud__then__cloudRemoved() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
+                List.of(
+                        buildEndpoint(true, "first"),
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "third")
                 ));
@@ -388,7 +375,7 @@ class BitbucketEndpointConfigurationTest {
         assumeTrue("second".equals(instance.getEndpoints().get(1).getCredentialsId()));
         assumeTrue("third".equals(instance.getEndpoints().get(2).getCredentialsId()));
 
-        assertThat(instance.removeEndpoint(new BitbucketCloudEndpoint(false, null))).isTrue();
+        assertThat(instance.removeEndpoint(new BitbucketCloudEndpoint())).isTrue();
         assertThat(instance.getEndpoints()).hasOnlyElementsOfType(BitbucketServerEndpoint.class);
         assertThat(instance.getEndpoints().get(0).getCredentialsId()).isEqualTo("second");
         assertThat(instance.getEndpoints().get(1).getCredentialsId()).isEqualTo("third");
@@ -398,8 +385,8 @@ class BitbucketEndpointConfigurationTest {
     void given__instanceWithCloudAndServers__when__removingNonExisting__then__noChange() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
+                List.of(
+                        buildEndpoint(true, "first"),
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "third")
                 ));
@@ -417,10 +404,7 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instance__when__onlyOneEndpoint__then__endpointsNotSelectable() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Collections.<AbstractBitbucketEndpoint>singletonList(
-                        new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "dummy")
-                ));
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "dummy", false, null)));
         assertThat(instance.isEndpointSelectable()).isFalse();
     }
 
@@ -428,8 +412,8 @@ class BitbucketEndpointConfigurationTest {
     void given__instance__when__multipleEndpoints__then__endpointsSelectable() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
+                List.of(
+                        buildEndpoint(true, "first"),
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "third")
                 ));
@@ -438,33 +422,28 @@ class BitbucketEndpointConfigurationTest {
 
     @Test
     void given__instanceWithCloudAndServers__when__findingExistingEndpoint__then__endpointFound() {
-        BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
+        BitbucketEndpointConfiguration.get().setEndpoints(
+                List.of(
+                        buildEndpoint(true, "first"),
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "third")
                 ));
-        Optional<AbstractBitbucketEndpoint> ep = instance.findEndpoint(BitbucketCloudEndpoint.SERVER_URL);
-        assertThat(ep).isPresent()
+        assertThat(BitbucketEndpointProvider.lookupEndpoint(BitbucketCloudEndpoint.SERVER_URL)).isPresent()
             .hasValueSatisfying(endpoint -> {
                 assertThat(endpoint.getCredentialsId()).isEqualTo("first");
             });
 
-        ep = instance.findEndpoint("https://bitbucket.example.com/");
-        assertThat(ep).isPresent()
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("https://bitbucket.example.com/")).isPresent()
             .hasValueSatisfying(endpoint -> {
                 assertThat(endpoint.getCredentialsId()).isEqualTo("second");
             });
 
-        ep = instance.findEndpoint("https://BITBUCKET.EXAMPLE.COM:443/");
-        assertThat(ep).isPresent()
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("https://BITBUCKET.EXAMPLE.COM:443/")).isPresent()
             .hasValueSatisfying(endpoint -> {
                 assertThat(endpoint.getCredentialsId()).isEqualTo("second");
             });
 
-        ep = instance.findEndpoint("http://example.org:8080/bitbucket/../bitbucket/");
-        assertThat(ep).isPresent()
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("http://example.org:8080/bitbucket/../bitbucket/")).isPresent()
             .hasValueSatisfying(endpoint -> {
                 assertThat(endpoint.getCredentialsId()).isEqualTo("third");
             });
@@ -472,42 +451,40 @@ class BitbucketEndpointConfigurationTest {
 
     @Test
     void given__instanceWithServers__when__findingNonExistingEndpoint__then__endpointNotFound() {
-        BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Arrays.<AbstractBitbucketEndpoint>asList(
+        BitbucketEndpointConfiguration.get().setEndpoints(
+                List.of(
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "dummy"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "dummy")
                 ));
-        assertThat(instance.findEndpoint(BitbucketCloudEndpoint.SERVER_URL)).isEmpty();
-        assertThat(instance.findEndpoint("http://bitbucket.example.com/")).isEmpty();
-        assertThat(instance.findEndpoint("http://bitbucket.example.com:80/")).isEmpty();
-        assertThat(instance.findEndpoint("http://bitbucket.example.com:443")).isEmpty();
-        assertThat(instance.findEndpoint("https://BITBUCKET.EXAMPLE.COM:443/bitbucket/")).isEmpty();
-        assertThat(instance.findEndpoint("http://example.org/bitbucket/../bitbucket/")).isEmpty();
-        assertThat(instance.findEndpoint("bitbucket.org")).isEmpty();
-        assertThat(instance.findEndpoint("bitbucket.example.com")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint(BitbucketCloudEndpoint.SERVER_URL)).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("http://bitbucket.example.com/")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("http://bitbucket.example.com:80/")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("http://bitbucket.example.com:443")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("https://BITBUCKET.EXAMPLE.COM:443/bitbucket/")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("http://example.org/bitbucket/../bitbucket/")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("bitbucket.org")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("bitbucket.example.com")).isEmpty();
     }
 
     @Test
     void given__instanceWithCloudAndServers__when__findingInvalid__then__endpointNotFound() {
-        BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
+        BitbucketEndpointConfiguration.get().setEndpoints(
+                List.of(
+                        buildEndpoint(true, "first"),
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "third")
                 ));
-        assertThat(instance.findEndpoint("0schemes-start-with+digits:no leading slash")).isEmpty();
-        assertThat(instance.findEndpoint("http://host name with spaces:443")).isEmpty();
-        assertThat(instance.findEndpoint("http://invalid.port.test:65536/bitbucket/")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("0schemes-start-with+digits:no leading slash")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("http://host name with spaces:443")).isEmpty();
+        assertThat(BitbucketEndpointProvider.lookupEndpoint("http://invalid.port.test:65536/bitbucket/")).isEmpty();
     }
 
     @Test
     void given__instanceWithCloudAndServers__when__populatingDropBox__then__endpointsListed() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
+                List.of(
+                        buildEndpoint(true, "first"),
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "third")
                 ));
@@ -525,8 +502,8 @@ class BitbucketEndpointConfigurationTest {
     void given__instanceWithCloudAndServers__when__resolvingExistingEndpoint__then__normalizedReturned() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
         instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
+                List.of(
+                        buildEndpoint(true, "first"),
                         new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
                         new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", true, "third")
                 ));
@@ -553,7 +530,7 @@ class BitbucketEndpointConfigurationTest {
         r.jenkins.setAuthorizationStrategy(mockStrategy);
         try (ACLContext context = ACL.as2(ACL.SYSTEM2)) {
             BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-            instance.setEndpoints(List.of(new BitbucketServerEndpoint("existing", "https://bitbucket.test", false, null)));
+            instance.setEndpoints(List.of(new BitbucketServerEndpoint("existing", "https://bitbucket.test", false, null, false, null)));
             assertThat(instance.getEndpointItems()).hasSize(1);
             assertThat(instance.readResolveServerUrl(null)).isEqualTo(BitbucketCloudEndpoint.SERVER_URL);
             assertThat(instance.getEndpointItems()).hasSize(2);
@@ -570,19 +547,19 @@ class BitbucketEndpointConfigurationTest {
             assertThat(instance.readResolveServerUrl("http://example.org:8080/foo/../bitbucket/.")).isEqualTo("http://example.org:8080/bitbucket");
             assertThat(instance.getEndpointItems()).hasSize(4);
             assertThat(instance.getEndpoints().get(0).getDisplayName()).isEqualTo("existing");
-            assertThat(instance.getEndpoints().get(0).getServerUrl()).isEqualTo("https://bitbucket.test");
+            assertThat(instance.getEndpoints().get(0).getServerURL()).isEqualTo("https://bitbucket.test");
             assertThat(instance.getEndpoints().get(0).isManageHooks()).isFalse();
             assertThat(instance.getEndpoints().get(0).getCredentialsId()).isNull();
             assertThat(instance.getEndpoints().get(1).getDisplayName()).isEqualTo(Messages.BitbucketCloudEndpoint_displayName());
-            assertThat(instance.getEndpoints().get(1).getServerUrl()).isEqualTo("https://bitbucket.org");
+            assertThat(instance.getEndpoints().get(1).getServerURL()).isEqualTo("https://bitbucket.org");
             assertThat(instance.getEndpoints().get(1).isManageHooks()).isFalse();
             assertThat(instance.getEndpoints().get(1).getCredentialsId()).isNull();
             assertThat(instance.getEndpoints().get(2).getDisplayName()).isEqualTo("example");
-            assertThat(instance.getEndpoints().get(2).getServerUrl()).isEqualTo("https://bitbucket.example.com");
+            assertThat(instance.getEndpoints().get(2).getServerURL()).isEqualTo("https://bitbucket.example.com");
             assertThat(instance.getEndpoints().get(2).isManageHooks()).isFalse();
             assertThat(instance.getEndpoints().get(2).getCredentialsId()).isNull();
             assertThat(instance.getEndpoints().get(3).getDisplayName()).isEqualTo("example");
-            assertThat(instance.getEndpoints().get(3).getServerUrl()).isEqualTo("http://example.org:8080/bitbucket");
+            assertThat(instance.getEndpoints().get(3).getServerURL()).isEqualTo("http://example.org:8080/bitbucket");
             assertThat(instance.getEndpoints().get(3).isManageHooks()).isFalse();
             assertThat(instance.getEndpoints().get(3).getCredentialsId()).isNull();
         } finally {
@@ -593,9 +570,8 @@ class BitbucketEndpointConfigurationTest {
     @Test
     void given__instanceWithCloudAndServers__when__resolvingNewEndpointAsAnon__then__normalizedReturnedNotAdded() {
         BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
-        instance.setEndpoints(Collections.<AbstractBitbucketEndpoint>singletonList(
-                new BitbucketServerEndpoint("existing", "https://bitbucket.test", false, null)));
-        try (ACLContext context = ACL.as(Jenkins.ANONYMOUS)) {
+        instance.setEndpoints(List.of(new BitbucketServerEndpoint("existing", "https://bitbucket.test", false, null, false, null)));
+        try (ACLContext context = ACL.as2(Jenkins.ANONYMOUS2)) {
             assertThat(instance.getEndpointItems()).hasSize(1);
             assertThat(instance.readResolveServerUrl(null)).isEqualTo(BitbucketCloudEndpoint.SERVER_URL);
             assertThat(instance.getEndpointItems()).hasSize(1);
@@ -612,7 +588,7 @@ class BitbucketEndpointConfigurationTest {
             assertThat(instance.readResolveServerUrl("http://example.org:8080/foo/../bitbucket/.")).isEqualTo("http://example.org:8080/bitbucket");
             assertThat(instance.getEndpointItems()).hasSize(1);
             assertThat(instance.getEndpoints().get(0).getDisplayName()).isEqualTo("existing");
-            assertThat(instance.getEndpoints().get(0).getServerUrl()).isEqualTo("https://bitbucket.test");
+            assertThat(instance.getEndpoints().get(0).getServerURL()).isEqualTo("https://bitbucket.test");
             assertThat(instance.getEndpoints().get(0).isManageHooks()).isFalse();
             assertThat(instance.getEndpoints().get(0).getCredentialsId()).isNull();
         }
@@ -622,10 +598,10 @@ class BitbucketEndpointConfigurationTest {
     void given__instanceWithConfig__when__configRoundtrip__then__configRetained() throws Exception {
         BitbucketEndpointConfiguration instance = BitbucketEndpointConfiguration.get();
         instance.setEndpoints(
-                Arrays.asList(
-                        new BitbucketCloudEndpoint(true, "first"),
-                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second"),
-                        new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", false, null)
+                List.of(
+                        buildEndpoint(true, "first"),
+                        new BitbucketServerEndpoint("Example Inc", "https://bitbucket.example.com/", true, "second", false, null),
+                        new BitbucketServerEndpoint("Example Org", "http://example.org:8080/bitbucket/", false, null, false, null)
                 ));
         SystemCredentialsProvider.getInstance().setDomainCredentialsMap(
                 Collections.singletonMap(Domain.global(), Arrays.<Credentials>asList(
@@ -643,19 +619,19 @@ class BitbucketEndpointConfigurationTest {
 
         BitbucketCloudEndpoint endpoint1 = (BitbucketCloudEndpoint) instance.getEndpoints().get(0);
         assertThat(endpoint1.getDisplayName()).isEqualTo(Messages.BitbucketCloudEndpoint_displayName());
-        assertThat(endpoint1.getServerUrl()).isEqualTo("https://bitbucket.org");
+        assertThat(endpoint1.getServerURL()).isEqualTo("https://bitbucket.org");
         assertThat(endpoint1.isManageHooks()).isTrue();
         assertThat(endpoint1.getCredentialsId()).isEqualTo("first");
 
         BitbucketServerEndpoint endpoint2 = (BitbucketServerEndpoint) instance.getEndpoints().get(1);
         assertThat(endpoint2.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(endpoint2.getServerUrl()).isEqualTo("https://bitbucket.example.com");
+        assertThat(endpoint2.getServerURL()).isEqualTo("https://bitbucket.example.com");
         assertThat(endpoint2.isManageHooks()).isTrue();
         assertThat(endpoint2.getCredentialsId()).isEqualTo("second");
 
         BitbucketServerEndpoint endpoint3 = (BitbucketServerEndpoint) instance.getEndpoints().get(2);
         assertThat(endpoint3.getDisplayName()).isEqualTo("Example Org");
-        assertThat(endpoint3.getServerUrl()).isEqualTo("http://example.org:8080/bitbucket");
+        assertThat(endpoint3.getServerURL()).isEqualTo("http://example.org:8080/bitbucket");
         assertThat(endpoint3.isManageHooks()).isFalse();
         assertThat(endpoint3.getCredentialsId()).isNull();
     }
@@ -674,6 +650,39 @@ class BitbucketEndpointConfigurationTest {
     }
 
     @Test
+    void load_serverConfig__with_old_signatures() throws Exception {
+        final URL configWithoutWebhookImpl = Resources.getResource(getClass(), "config-old-signatures.xml");
+        final File configFile = new File(Jenkins.get().getRootDir(), BitbucketEndpointConfiguration.class.getName() + ".xml");
+        FileUtils.copyURLToFile(configWithoutWebhookImpl, configFile);
+
+        final BitbucketEndpointConfiguration instance = new BitbucketEndpointConfiguration();
+
+        assertThat(instance.getEndpoints()).element(0)
+            .isInstanceOf(BitbucketCloudEndpoint.class)
+            .asInstanceOf(InstanceOfAssertFactories.type(BitbucketCloudEndpoint.class))
+            .satisfies(endpoint -> {
+                assertThat(endpoint.isEnableCache()).isFalse();
+                assertThat(endpoint.isManageHooks()).isFalse();
+                assertThat(endpoint.getCredentialsId()).isNull();
+                assertThat(endpoint.getTeamCacheDuration()).isEqualTo(360);
+                assertThat(endpoint.getRepositoriesCacheDuration()).isEqualTo(180);
+            });
+        assertThat(instance.getEndpoints()).element(1)
+            .isInstanceOf(BitbucketServerEndpoint.class)
+            .asInstanceOf(InstanceOfAssertFactories.type(BitbucketServerEndpoint.class))
+            .satisfies(endpoint -> {
+                assertThat(endpoint.isManageHooks()).isTrue();
+                assertThat(endpoint.getCredentialsId()).isEqualTo("admin.basic.credentials");
+                assertThat(endpoint.getEndpointJenkinsRootURL()).isEqualTo("http://host.docker.internal:8090/jenkins/");
+                assertThat(endpoint.getDisplayName()).isEqualTo("server");
+                assertThat(endpoint.getWebhookImplementation()).isEqualTo(BitbucketServerWebhookImplementation.NATIVE);
+                assertThat(endpoint.isCallCanMerge()).isTrue();
+                assertThat(endpoint.isCallChanges()).isTrue();
+            });
+        assertThat(instance.getEndpoints()).element(1).isInstanceOf(BitbucketServerEndpoint.class);
+    }
+
+    @Test
     void should_support_configuration_as_code() throws Exception {
         ConfigurationAsCode.get().configure(getClass().getResource(getClass().getSimpleName() + "/configuration-as-code.yml").toString());
 
@@ -681,19 +690,25 @@ class BitbucketEndpointConfigurationTest {
 
         assertThat(instance.getEndpoints()).hasSize(12);
 
-        BitbucketCloudEndpoint endpoint1 = (BitbucketCloudEndpoint) instance.getEndpoints().get(0);
-        assertThat(endpoint1.getDisplayName()).isEqualTo(Messages.BitbucketCloudEndpoint_displayName());
-        assertThat(endpoint1.getServerUrl()).isEqualTo("https://bitbucket.org");
-        assertThat(endpoint1.isManageHooks()).isTrue();
-        assertThat(endpoint1.getCredentialsId()).isEqualTo("first");
-        assertThat(endpoint1.isEnableCache()).isTrue();
-        assertThat(endpoint1.getTeamCacheDuration()).isEqualTo(1);
-        assertThat(endpoint1.getRepositoriesCacheDuration()).isEqualTo(2);
+        assertThat(instance.getEndpoints()).element(0).isInstanceOf(BitbucketCloudEndpoint.class);
+        BitbucketCloudEndpoint endpoint = (BitbucketCloudEndpoint) instance.getEndpoints().get(0);
+        assertThat(endpoint.getDisplayName()).isEqualTo(Messages.BitbucketCloudEndpoint_displayName());
+        assertThat(endpoint.getServerURL()).isEqualTo("https://bitbucket.org");
+        assertThat(endpoint.isManageHooks()).isTrue();
+        assertThat(endpoint.getCredentialsId()).isEqualTo("first");
+        assertThat(endpoint.isEnableCache()).isTrue();
+        assertThat(endpoint.getTeamCacheDuration()).isEqualTo(1);
+        assertThat(endpoint.getRepositoriesCacheDuration()).isEqualTo(2);
+        assertThat(endpoint.isEnableHookSignature()).isTrue();
+        assertThat(endpoint.getHookSignatureCredentialsId()).isEqualTo("secretId");
 
         BitbucketServerEndpoint serverEndpoint;
+
+        // test that set credentials, before enabling the corresponding management, will result null
+        assertThat(instance.getEndpoints()).element(1).isInstanceOf(BitbucketServerEndpoint.class);
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(1);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("https://bitbucket.example.com");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("https://bitbucket.example.com");
         assertThat(serverEndpoint.isManageHooks()).isTrue();
         assertThat(serverEndpoint.getCredentialsId()).isEqualTo("second");
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
@@ -701,9 +716,10 @@ class BitbucketEndpointConfigurationTest {
         assertThat(serverEndpoint.getWebhookImplementation()).isEqualTo(BitbucketServerWebhookImplementation.PLUGIN);
         assertThat(serverEndpoint.getServerVersion()).isEqualTo(BitbucketServerVersion.VERSION_7);
 
+        assertThat(instance.getEndpoints()).element(2).isInstanceOf(BitbucketServerEndpoint.class);
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(2);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Org");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://example.org:8080/bitbucket");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://example.org:8080/bitbucket");
         assertThat(serverEndpoint.isManageHooks()).isFalse();
         assertThat(serverEndpoint.getCredentialsId()).isNull();
         assertThat(serverEndpoint.isCallCanMerge()).isTrue();
@@ -713,7 +729,7 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(3);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8083");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8083");
         assertThat(serverEndpoint.isManageHooks()).isTrue();
         assertThat(serverEndpoint.getCredentialsId()).isEqualTo("third");
         assertThat(serverEndpoint.isCallCanMerge()).isTrue();
@@ -723,7 +739,7 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(4);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8084");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8084");
         assertThat(serverEndpoint.isManageHooks()).isTrue();
         assertThat(serverEndpoint.getCredentialsId()).isEqualTo("fourth");
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
@@ -733,7 +749,7 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(5);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8085");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8085");
         assertThat(serverEndpoint.isManageHooks()).isTrue();
         assertThat(serverEndpoint.getCredentialsId()).isEqualTo("fifth");
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
@@ -743,7 +759,7 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(6);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8086");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8086");
         assertThat(serverEndpoint.isManageHooks()).isFalse();
         assertThat(serverEndpoint.getCredentialsId()).isNull();
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
@@ -753,7 +769,7 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(7);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8087");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8087");
         assertThat(serverEndpoint.isManageHooks()).isFalse();
         assertThat(serverEndpoint.getCredentialsId()).isNull();
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
@@ -763,7 +779,7 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(8);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8088");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8088");
         assertThat(serverEndpoint.isManageHooks()).isFalse();
         assertThat(serverEndpoint.getCredentialsId()).isNull();
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
@@ -773,7 +789,7 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(9);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8089");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8089");
         assertThat(serverEndpoint.isManageHooks()).isFalse();
         assertThat(serverEndpoint.getCredentialsId()).isNull();
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
@@ -783,7 +799,7 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(10);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8090");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8090");
         assertThat(serverEndpoint.isManageHooks()).isFalse();
         assertThat(serverEndpoint.getCredentialsId()).isNull();
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
@@ -793,13 +809,17 @@ class BitbucketEndpointConfigurationTest {
 
         serverEndpoint = (BitbucketServerEndpoint) instance.getEndpoints().get(11);
         assertThat(serverEndpoint.getDisplayName()).isEqualTo("Example Inc");
-        assertThat(serverEndpoint.getServerUrl()).isEqualTo("http://bitbucket.example.com:8091");
+        assertThat(serverEndpoint.getServerURL()).isEqualTo("http://bitbucket.example.com:8091");
         assertThat(serverEndpoint.isManageHooks()).isFalse();
         assertThat(serverEndpoint.getCredentialsId()).isNull();
         assertThat(serverEndpoint.isCallCanMerge()).isFalse();
         assertThat(serverEndpoint.isCallChanges()).isTrue();
         assertThat(serverEndpoint.getWebhookImplementation()).isEqualTo(BitbucketServerWebhookImplementation.PLUGIN);
         assertThat(serverEndpoint.getServerVersion()).isEqualTo(BitbucketServerVersion.VERSION_5);
+    }
+
+    private BitbucketCloudEndpoint buildEndpoint(boolean manageHook, String credentials) {
+        return new BitbucketCloudEndpoint(false, 0, 0, manageHook, credentials, false, null);
     }
 
 }
